--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/pothole
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://pothole-db-instance.cguuplym7djf.ap-south-1.rds.amazonaws.com:3306/pothole
+spring.datasource.username=potholedbadmin
+spring.datasource.password=KCsPjRpbBym4Wqlt6593
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
