SSL Self signed key added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,16 @@ spring.datasource.password=KCsPjRpbBym4Wqlt6593
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-server.port=9898
+#server.port=443
+#server.port=8443
+#
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=password
+#server.ssl.key-alias=tomcat
+#security.require-ssl=true
+
+#
+#trust.store=classpath:baeldung.p12
+##trust store password
+#trust.store.password=password
