--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,12 @@ spring:
       enabled: true
       max-file-size: 5MB
       max-request-size: 5MB
+
+server:
+  ssl:
+    key-store-type: PKCS12
+    key-store: classpath:baeldung.p12
+    key-store-password: password
+    key-alias: baeldung
+    key-password: password
+    enabled: true
