--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,11 @@ spring:
       max-file-size: 5MB
       max-request-size: 5MB
 
+security:
+  require-ssl: true
+
 server:
+  port: 443
   ssl:
     key-store-type: PKCS12
     key-store: classpath:baeldung.p12
