--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,12 +24,22 @@ spring:
 security:
   require-ssl: true
 
+#server:
+#  port: 443
+#  ssl:
+#    key-store-type: PKCS12
+#    key-store: classpath:baeldung.p12
+#    key-store-password: password
+#    key-alias: baeldung
+#    key-password: password
+#    enabled: true
+
 server:
-  port: 443
+  port: 8080
   ssl:
-    key-store-type: PKCS12
+    enabled: true
+    keyStoreType: PKCS12
     key-store: classpath:baeldung.p12
     key-store-password: password
-    key-alias: baeldung
-    key-password: password
-    enabled: true
+  http:
+    port: 8079
