--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.datasource.url=jdbc:mysql://pothole-db-instance.cguuplym7djf.ap-south-1.r
 spring.datasource.username=potholedbadmin
 spring.datasource.password=KCsPjRpbBym4Wqlt6593
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #server.port=443
 #server.port=8443
 #
@@ -13,8 +12,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #server.ssl.key-store-password=password
 #server.ssl.key-alias=tomcat
 #security.require-ssl=true
-
 #
 #trust.store=classpath:baeldung.p12
 ##trust store password
 #trust.store.password=password
+#security.require-ssl=true
+server.tomcat.remote_ip_header=x-forwarded-for
+server.tomcat.protocol_header=x-forwarded-proto
+java.runtime.version=11
