AWS Credentials fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 ##trust store password
 #trust.store.password=password
 #security.require-ssl=true
-server.tomcat.remote_ip_header=x-forwarded-for
-server.tomcat.protocol_header=x-forwarded-proto
+#server.tomcat.remote_ip_header=x-forwarded-for
+#server.tomcat.protocol_header=x-forwarded-proto
+cloud.aws.credentials.accessKey=AKIARS5K65VDH3DM6H6S
+cloud.aws.credentials.secretKey=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
+cloud.aws.credentials.instanceProfile=true
+cloud.aws.credentials.useDefaultAwsCredentialsChain=true
